# SchemaForge-Client

./: package-lock.json  package.json  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/ui/: Button.jsx  Dialog.jsx
src/pages/: CommandPalette.jsx  _app.tsx  index.jsx
